fixed type on whitespace

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -228,7 +228,7 @@ footer{
             font-family: 'Oswald', sans-serif;
             text-transform: uppercase;
             display: block;
-            padding: 20px 0;
+            padding: 25px 0;
             text-align: center;
             text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
             &:hover{
@@ -266,7 +266,7 @@ footer{
         padding: 8px;
     }
     a{
-        color: #eee;
+          color: #eee;
         display: block;
         margin: 5px 0;
         padding: 5px;
